[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = "Python code quality example in testdriven.io"
authors = ["Eduardo Melendez <edgame127@gmail.com>"]
readme = "README.md"
packages = [{include = "flask-example"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
safety = "^2.3.5"
bandit = "^1.7.5"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
